// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FontSizeTokens snapshot no color tokens 1`] = `
<DocumentFragment>
  <section
    class="border-bottom p-sm"
  >
    <div
      class="tokens-section-header"
    >
      <h3
        class="section-title"
      >
        Font Size
      </h3>
      <div
        aria-label="Add token"
        class="icon-button"
        data-testid="add-token-btn"
        role="button"
        tabindex="0"
      >
        <div
          class="icon icon--plus"
        />
      </div>
    </div>
    <p
      class="label my-0"
    >
      No font size tokens
    </p>
    <div
      class=""
      id="modal"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-dialog-header"
        >
          <h2
            class="section-title"
          >
            Font Size
          </h2>
          <div
            aria-label="Close"
            class="icon-button"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--close"
            />
          </div>
        </div>
        <div
          class="modal-dialog-body"
        >
          <form>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="name"
                placeholder="font-size-base"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="value"
                maxlength="6"
                placeholder="16"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="d-flex justify-content-end"
            >
              <button
                class="button button--primary"
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`FontSizeTokens snapshot with color tokens 1`] = `
<DocumentFragment>
  <section
    class="border-bottom p-sm"
  >
    <div
      class="tokens-section-header"
    >
      <h3
        class="section-title"
      >
        Font Size
      </h3>
      <div
        aria-label="Add token"
        class="icon-button"
        data-testid="add-token-btn"
        role="button"
        tabindex="0"
      >
        <div
          class="icon icon--plus"
        />
      </div>
    </div>
    <div
      class="d-flex flex-row flex-wrap"
    >
      <div
        class="d-flex flex-row align-items-center justify-content-between w-100 color-token-container"
      >
        <button
          class="color-token"
        >
          <span
            class="mr-md font-token-shape"
          >
            Ag
          </span>
          <span>
            font-size-base
          </span>
        </button>
        <div
          class="d-flex flex-row"
        >
          <div
            aria-label="Edit font-size-base"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--adjust"
            />
          </div>
          <div
            aria-label="Delete font-size-base"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--trash"
            />
          </div>
        </div>
      </div>
      <div
        class="d-flex flex-row align-items-center justify-content-between w-100 color-token-container"
      >
        <button
          class="color-token"
        >
          <span
            class="mr-md font-token-shape"
          >
            Ag
          </span>
          <span>
            font-size-lg
          </span>
        </button>
        <div
          class="d-flex flex-row"
        >
          <div
            aria-label="Edit font-size-lg"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--adjust"
            />
          </div>
          <div
            aria-label="Delete font-size-lg"
            class="icon-button visibility-hidden"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--trash"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class=""
      id="modal"
    >
      <div
        class="modal-dialog"
      >
        <div
          class="modal-dialog-header"
        >
          <h2
            class="section-title"
          >
            Font Size
          </h2>
          <div
            aria-label="Close"
            class="icon-button"
            role="button"
            tabindex="0"
          >
            <div
              class="icon icon--close"
            />
          </div>
        </div>
        <div
          class="modal-dialog-body"
        >
          <form>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="name"
                placeholder="font-size-base"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="input mb-sm form-group"
            >
              <input
                class="input__field"
                id="value"
                maxlength="6"
                placeholder="16"
                type="text"
                value=""
              />
              <p
                class="visibility-hidden"
              />
            </div>
            <div
              class="d-flex justify-content-end"
            >
              <button
                class="button button--primary"
                type="submit"
              >
                Save
              </button>
            </div>
          </form>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
